--- a/css/projects.css
+++ b/css/projects.css
@@ -30,4 +30,21 @@
      line-height: 1.6;
      color: #fff; /* White text color */
  }
- 
+
+ .project-container {
+    background-color: #040d12; /* Use the desired background color */
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add a shadow for depth */
+}
+ /* styles.css */
+/* ... (existing styles) ... */
+
+
+.head {
+    text-align: center; /* Center the text horizontally */
+    margin-top: 20px; /* Add a top margin for spacing */
+    font-size: 24px; /* Adjust the font size as needed */
+    color: #fff; /* Set the text color */
+}
