--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* Reset some default styles */
 body, h1, h2, h3, p, ul, li {
-     margin: 0;
-     padding: 0;
+     margin: 1;
+     padding: ;
  }
  
  /* Common styles for all pages */
