--- a/css/avail_projects.css
+++ b/css/avail_projects.css
@@ -65,3 +65,18 @@
     font-size: 24px; /* Adjust the font size as needed */
     color: #fff; /* Set the text color */
 } 
+
+
+.learn-more-button {
+    background-color: #183d5c;
+    color: #fff;
+    border: none;
+    padding: 15px 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.learn-more-button:hover {
+    background-color: #122b42;
+}
